--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,6 @@
 [submodule "AddOns/WorldBuffSoundAlert"]
 	path = AddOns/WorldBuffSoundAlert
 	url = https://github.com/Bergador/WorldBuffSoundAlert.git
+[submodule "AddOns/SKMap"]
+	path = AddOns/SKMap
+	url = https://github.com/EinBaum/SKMap.git
